@@ -272,6 +272,7 @@ x2goclient (4.0.5.3-0x2go1) UNRELEASED; urgency=medium
       (OS-dependent) PulseAudio config and cookie directory.
     - src/pulsemanager.cpp: replace hardcoded modules paths with dynamic ones
       depending on the detected PA version.
+    - src/pulsemanager.cpp: add "FIXME" debug logging (and cleanup.)
 
   [ Bernard Cafarelli ]
   * New upstream version (4.0.5.3):
